[package]
name = "pinger"
version = "0.1.2-alpha.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
license = "MIT"
description = "A small cross-platform library to execute the ping command and parse the output"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
regex = "1.4.2"
lazy_static = "1.4.0"
os_info = "3.0.1"
thiserror = "1.0.21"
