[package]
name = "pinger"
version = "0.1.7-alpha.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
license = "MIT"
description = "A small cross-platform library to execute the ping command and parse the output"
repository = "https://github.com/orf/pinger/"

[dependencies]
anyhow = "1.0.33"
regex = "1.4.2"
lazy_static = "1.4.0"
os_info = { version = "3.0.1", default_features = false }
thiserror = "1.0.21"

[target.'cfg(windows)'.dependencies]
winping = "0.10.1"
dns-lookup = "1.0.5"
